second change to the index page

--- a/index.html
+++ b/index.html
@@ -543,19 +543,19 @@
     <!-- parallax section -->
     <section class="parallax2 parallax-fix no-padding scroll-to-down-white full-width-image owl-half-slider"
         onclick="scrollToDownSection()">
-        <img class="parallax-background-img" src="images/morgue.jpg" alt="" />
-        <div class="opacity-light bg-black"></div>
+        <img class="parallax-background-img" src="images/image3d.jpg" alt="" />
+        
         <div class="container position-relative">
             <div class="slider-typography text-center">
                 <div class="slider-text-middle-main">
                     <div class="slider-text-bottom padding-left-right-px animated fadeInUp">
-                        <span class="owl-title white-text center-col margin-ten no-margin-top">Kivaani Funeral
-                            Home</span>
+                        <span class="owl-title white-text center-col margin-ten no-margin-top"><strong>Kivaani Funeral
+                            Home</strong></span>
                         <div class="separator-line-thick bg-yellow margin-three"></div>
-                        <span class="owl-subtitle white-text">Every life deserves a special time of honoring and
-                            celebration.</span>
-                        <div class="separator-line-thick bg-yellow margin-three"></div>
-                        <span class="owl-title white-text center-col margin-ten no-margin-top">Celebrate Life.</span>
+                        <span class="owl-subtitle black-text"><h1><strong>Every life deserves a special time of honoring and
+                            celebration.</strong></h1></span>
+                            <div class="separator-line-thick bg-yellow margin-three"></div>
+                        <span class="owl-title white-text center-col margin-ten no-margin-top"><h1>Celebrate Life.</h1></span>
                     </div>
                 </div>
             </div>
